# multi-tenant

./: .gitignore  Cargo.toml  Makefile  README.md  SPEC.md  alloy.opam  config.example.json  dune-project  url-router.opam
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deb.yml  release.yml
crates/url-router/: Cargo.toml
crates/url-router-client/: Cargo.toml
crates/url-router-client/src/: bridge.rs  cli.rs  framing.rs  main.rs  translate.rs
crates/url-router-native-host/: Cargo.toml
crates/url-router-native-host/src/: bridge.rs  framing.rs  main.rs  translate.rs
crates/url-router-protocol/: Cargo.toml
crates/url-router-protocol/src/: config.rs  lib.rs  matching.rs  protocol.rs  types.rs
crates/url-router/src/: browser.rs  config_io.rs  coordinator.rs  forwarding.rs  logging.rs  main.rs  notification.rs  oneshot.rs  server.rs
crates/url-router/src/cli/: client.rs  mod.rs  setup.rs
crates/url-router/src/daemon/: handler.rs  mod.rs  server.rs
debian/: alloy-extension-policy.json  alloy.desktop  alloy.json  alloyd.postinst.debhelper  alloyd.service  changelog  chromium-extension.json  control  dihkhgdagigaecpjlbfbiecpocnbeheh.json  jhejkohfkfaeidbbnhjkicadefnapedo.json  rules  updates.xml  url-router-client.desktop  url-router.postinst.debhelper  url-router.service  url_router.json
extension/: add_rule.html  add_rule.js  add_rule_page.ml  assign.html  chrome_api.js  chrome_api.ml  chrome_api.mli  config.html  config.js  config_page.ml  dune  main.ml  manifest.json  options.html  options.js  options_page.ml  package-lock.json  package.json  page_api.js  page_util.ml  popup.html  popup.js  popup.ml  settings.html  tsconfig.json
extension/__tests__/: chrome_mock.js  navigation.test.js  popup.test.js
extension/src/: assign.ts  background.ts  badge.ts  daemon-client.ts  menu.ts  popup.ts  protocol.ts  settings.ts
lib/cidr/: cidr.ml  dune
lib/log/: dune  log.ml
lib/protocol/: dune  protocol.ml  protocol.mli
test/: dune  integration.js  test_protocol.ml
