[workspace]
resolver = "2"
members = [
    "crates/url-router",
    "crates/url-router-client",
    "crates/url-router-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
derive_more = { version = "1", features = ["display", "from", "from_str"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
notify = "7"
notify-rust = "4"

url-router-protocol = { path = "crates/url-router-protocol" }

[profile.release]
strip = true
debug = false
