[package]
name = "url-router-protocol"
description = "Shared types for the url-router multi-tenant URL routing system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
